# wave-learner-cuda

./: package-lock.json  package.json
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/cuda/: trainer.cu  trainer.h
src/lib/: WaveDrawer.svelte  consts.ts  maths.ts  stores.ts
